--- a/main/resources/view/Department.fxml
+++ b/main/resources/view/Department.fxml
@@ -50,24 +50,24 @@
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Label>
-            <TextField fx:id="txtDepartmentId" promptText="Enter Department ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <TextField fx:id="txtDepartmentId" onAction="#departmentIdOnAction" promptText="Enter Department ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
 
             <Label text="Department Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Label>
-            <TextField fx:id="txtDepartmentName" promptText="Enter Department Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtDepartmentName" onAction="#dnameOnAction" promptText="Enter Department Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
 
             <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Label>
-            <TextField fx:id="txtEmployeeId" promptText="Enter Employee ID" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtEmployeeId" onAction="#eIdOnAction" promptText="Enter Employee ID" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
 
-            <Button fx:id="btnSearch" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #FFC107;" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button fx:id="btnSearch" onAction="#searchOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #FFC107;" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="2">
                 <font>
                     <Font name="System Bold" size="13.0" />
                 </font>
@@ -81,22 +81,22 @@
 
 
         <HBox alignment="CENTER" spacing="10.0">
-            <Button fx:id="btnAdd" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #00cec9; -fx-text-fill: white;" text="Add">
+            <Button fx:id="btnAdd" onAction="#addOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #00cec9; -fx-text-fill: white;" text="Add">
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Button>
-            <Button fx:id="btnUpdate" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #2196F3; -fx-text-fill: white;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #2196F3; -fx-text-fill: white;" text="Update">
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Button>
-            <Button fx:id="btnDelete" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #f44336; -fx-text-fill: white;" text="Delete">
+            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #f44336; -fx-text-fill: white;" text="Delete">
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Button>
         </HBox>
 
 
-        <TableView fx:id="tblDepartment" prefHeight="240.0" prefWidth="740.0">
+        <TableView fx:id="tblDepartment" onSort="#tblOnAction" prefHeight="240.0" prefWidth="740.0">
             <columns>
                 <TableColumn fx:id="colDepartmentId" prefWidth="200.0" text="Department ID" />
                 <TableColumn fx:id="colDepartmentName" prefWidth="538.6666717529297" text="Department Name" />
