--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -21,83 +21,83 @@
       <VBox layoutX="-4.0" layoutY="-2.0" prefHeight="629.0" prefWidth="1280.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="-20.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="-2.0">
          <padding><Insets bottom="10" left="10" right="10" top="10" /></padding>
 
-         <!-- Title -->
+
          <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Employee Management System" textFill="WHITE" />
 
-         <!-- Grid Form -->
+
          <GridPane hgap="10" vgap="10">
             <columnConstraints>
                <ColumnConstraints halignment="RIGHT" minWidth="120" />
                <ColumnConstraints minWidth="200" />
             </columnConstraints>
 
-            <!-- Input Fields -->
+
             <children>
                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtEmpId" prefHeight="25.0" prefWidth="401.0" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+               <TextField fx:id="txtEmpId" onAction="#eidOnAction" prefHeight="25.0" prefWidth="547.0" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                <Label text="First Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtFirstName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               <TextField fx:id="txtFirstName" onAction="#efirstnameOnAction" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                <Label text="Last Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtLastName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               <TextField fx:id="txtLastName" onAction="#elastnameOnAction" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                <Label text="Department ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtDeptId" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               <TextField fx:id="txtDeptId" onAction="#departmentOnAction" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-               <Label text="Date of Birth:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <Label fx:id="dob" text="Date of Birth:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <DatePicker fx:id="dateDOB" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+               <DatePicker fx:id="dateDOB" onAction="#dobOnAction" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
                <Label text="Address:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtAddress" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+               <TextField fx:id="txtAddress" onAction="#addressOnAction" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
                <Label text="Join Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="6">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <DatePicker fx:id="dateJoinDate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+               <DatePicker fx:id="dateJoinDate" onAction="#jdOnAction" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
                <Label text="Age:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="7">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtAge" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+               <TextField fx:id="txtAge" onAction="#ageOnAction" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
                <Label text="Email:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="8">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+               <TextField fx:id="txtEmail" onAction="#emailOnAction" GridPane.columnIndex="1" GridPane.rowIndex="8" />
 
                <Label text="Contact:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="9">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtContact" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+               <TextField fx:id="txtContact" onAction="#contactOnAction" GridPane.columnIndex="1" GridPane.rowIndex="9" />
 
                <Label text="Position ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="10">
                   <font>
                      <Font name="System Bold" size="12.0" />
                   </font></Label>
-               <TextField fx:id="txtPositionId" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+               <TextField fx:id="txtPositionId" onAction="#pidOnAction" GridPane.columnIndex="1" GridPane.rowIndex="10" />
             </children>
             <rowConstraints>
                <RowConstraints />
@@ -114,28 +114,28 @@
             </rowConstraints>
          </GridPane>
 
-         <!-- Button Controls -->
+
          <HBox alignment="CENTER" spacing="10">
-            <Button fx:id="btnSave" prefHeight="25.0" prefWidth="97.0" style="-fx-background-color: #ffeaa7;" text="Save">
+            <Button fx:id="btnSave" onAction="#saveOnAction" prefHeight="25.0" prefWidth="97.0" style="-fx-background-color: #ffeaa7;" text="Save">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="btnUpdate" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #00cec9;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #00cec9;" text="Update">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="btnDelete" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #ff7675;" text="Delete">
+            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="25.0" prefWidth="90.0" style="-fx-background-color: #ff7675;" text="Delete">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-            <Button fx:id="btnClear" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: #b2bec3;" text="Reset">
+            <Button fx:id="btnClear" onAction="#resetOnAction" prefHeight="25.0" prefWidth="84.0" style="-fx-background-color: #b2bec3;" text="Reset">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
          </HBox>
 
-         <!-- TableView -->
-         <TableView fx:id="tblEmployees" prefHeight="80.0" prefWidth="945.0">
+
+         <TableView fx:id="tblEmployees" onSort="#tblOnAction" prefHeight="80.0" prefWidth="945.0">
             <columns>
                <TableColumn fx:id="colEmpId" prefWidth="66.00000190734863" text="Emp ID" />
                <TableColumn fx:id="colFirstName" prefWidth="93.99999237060547" text="First Name" />
