--- a/main/resources/view/Employee_Equipment.fxml
+++ b/main/resources/view/Employee_Equipment.fxml
@@ -22,7 +22,10 @@
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Employee Equipment Assignment" textFill="WHITE" />
+            <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Employee Equipment Assignment" textFill="WHITE">
+            <font>
+               <Font size="18.0" />
+            </font></Label>
 
             <GridPane hgap="10" vgap="15">
                 <columnConstraints>
@@ -40,32 +43,45 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtAssignmentId" promptText="EQA001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="txtAssignmentId" onAction="#assignOnAction" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtEmployeeId" onAction="#eidOnAction" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Label text="Equipment ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtEquipmentId" promptText="EQP001" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                <TextField fx:id="txtEquipmentId" onAction="#equipmentOnAction" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="2" />
             </GridPane>
 
             <HBox alignment="CENTER" spacing="15">
-                <Button fx:id="btnSave" prefWidth="100" text="Save" />
-                <Button fx:id="btnUpdate" prefWidth="100" text="Update" />
-                <Button fx:id="btnDelete" prefWidth="100" text="Delete" />
-                <Button fx:id="btnClear" prefWidth="100" text="Clear" />
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnClear" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </HBox>
         </VBox>
-      <TableView layoutX="14.0" layoutY="272.0" prefHeight="200.0" prefWidth="693.0">
+      <TableView layoutX="22.0" layoutY="272.0" onSort="#tblOnAction" prefHeight="200.0" prefWidth="1113.0">
         <columns>
-          <TableColumn prefWidth="104.6666898727417" text="Assignment ID" />
-          <TableColumn prefWidth="247.33329010009766" text="C2" />
+          <TableColumn prefWidth="372.0000114440918" text="Assignment ID" />
+          <TableColumn prefWidth="386.66668701171875" text="Employee ID" />
+            <TableColumn prefWidth="361.99993896484375" text="Equipment ID" />
         </columns>
       </TableView>
     </children>
