--- a/main/resources/view/Leaves.fxml
+++ b/main/resources/view/Leaves.fxml
@@ -1,66 +1,112 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LeavesController"
-            prefHeight="600.0" prefWidth="800.0">
+<AnchorPane prefHeight="656.0" prefWidth="1022.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LeavesController">
 
     <children>
-        <VBox spacing="20" alignment="TOP_CENTER" layoutX="30.0" layoutY="20.0" prefWidth="740">
+        <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="10.0" prefHeight="636.0" prefWidth="981.0" spacing="20">
             <padding>
-                <Insets top="20" right="20" bottom="20" left="20"/>
+                <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label text="Leave Management" style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold;" text="Leave Management" textFill="WHITE" />
 
-            <!-- Form Area -->
+
             <GridPane hgap="10" vgap="15">
                 <columnConstraints>
-                    <ColumnConstraints halignment="RIGHT"/>
-                    <ColumnConstraints prefWidth="300"/>
+                    <ColumnConstraints halignment="RIGHT" />
+                    <ColumnConstraints prefWidth="300" />
                 </columnConstraints>
 
-                <Label text="Leave ID:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtLeaveId" promptText="L001" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                <Label text="Leave ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtLeaveId" onAction="#leaveOnAction" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-                <Label text="Employee ID:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-                <TextField fx:id="txtEmployeeId" promptText="EMP001" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <TextField fx:id="txtEmployeeId" onAction="#eIdOnAction" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="Status:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-                <ComboBox fx:id="cmbStatus" promptText="Pending/Approved" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                <Label text="Status:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <ComboBox fx:id="cmbStatus" onAction="#statusOnAction" promptText="Pending/Approved" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="Leave Type:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-                <ComboBox fx:id="cmbLeaveType" promptText="Sick, Annual, Casual" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                <Label text="Leave Type:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <ComboBox fx:id="cmbLeaveType" onAction="#ltypeOnAction" promptText="Sick, Annual, Casual" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                <Label text="Start Date:" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-                <DatePicker fx:id="dpStartDate" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                <Label text="Start Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <DatePicker fx:id="dpStartDate" onAction="#startdateOnAction" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                <Label text="End Date:" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-                <DatePicker fx:id="dpEndDate" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+                <Label text="End Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="5">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Label>
+                <DatePicker fx:id="dpEndDate" onAction="#enddateOnAction" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
             </GridPane>
 
-            <!-- Button Controls -->
-            <HBox spacing="15" alignment="CENTER">
-                <Button text="Save" fx:id="btnSave" prefWidth="100"/>
-                <Button text="Update" fx:id="btnUpdate" prefWidth="100"/>
-                <Button text="Delete" fx:id="btnDelete" prefWidth="100"/>
-                <Button text="Clear" fx:id="btnClear" prefWidth="100"/>
+
+            <HBox alignment="CENTER" spacing="15">
+                <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #00cec9;" text="Update">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #ff7675;" text="Delete">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
             </HBox>
 
-            <!-- Table View -->
-            <TableView fx:id="tblLeaves" prefHeight="250" prefWidth="700">
+
+            <TableView fx:id="tblLeaves" onSort="#tblOnAction" prefHeight="250" prefWidth="731.0">
                 <columns>
-                    <TableColumn fx:id="colLeaveId" text="Leave ID" prefWidth="100"/>
-                    <TableColumn fx:id="colEmployeeId" text="Employee ID" prefWidth="100"/>
-                    <TableColumn fx:id="colStatus" text="Status" prefWidth="100"/>
-                    <TableColumn fx:id="colLeaveType" text="Leave Type" prefWidth="100"/>
-                    <TableColumn fx:id="colStartDate" text="Start Date" prefWidth="100"/>
-                    <TableColumn fx:id="colEndDate" text="End Date" prefWidth="100"/>
+                    <TableColumn fx:id="colLeaveId" prefWidth="100" text="Leave ID" />
+                    <TableColumn fx:id="colEmployeeId" prefWidth="100" text="Employee ID" />
+                    <TableColumn fx:id="colStatus" prefWidth="196.00001525878906" text="Status" />
+                    <TableColumn fx:id="colLeaveType" prefWidth="207.99990844726562" text="Leave Type" />
+                    <TableColumn fx:id="colStartDate" prefWidth="160.6666259765625" text="Start Date" />
+                    <TableColumn fx:id="colEndDate" prefWidth="180.66668701171875" text="End Date" />
                 </columns>
             </TableView>
         </VBox>
