--- a/main/resources/view/login.fxml
+++ b/main/resources/view/login.fxml
@@ -12,14 +12,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: linear-gradient(to right, #11998e, #38ef7d);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="1006.0" style="-fx-background-color: linear-gradient(to right, #11998e, #38ef7d);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.LoginController">
 
    <children>
 
-      <!-- Left side image -->
-      <ImageView fitHeight="378.0" fitWidth="257.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+
+      <ImageView fitHeight="378.0" fitWidth="184.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <!-- Replace with your actual image path -->
+
             <Image url="@assets/login-image.png" />
          </image>
       </ImageView>
@@ -32,9 +32,7 @@
       </Label>
 
       <!-- Login Form Box -->
-      <VBox alignment="CENTER" layoutX="267.0" layoutY="19.0" prefHeight="361.0" prefWidth="307.0" spacing="15.0"
-            style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 20;"
-            AnchorPane.topAnchor="19.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="14.0">
+      <VBox alignment="CENTER" layoutX="267.0" layoutY="19.0" prefHeight="361.0" prefWidth="789.0" spacing="15.0" style="-fx-background-color: white; -fx-background-radius: 15; -fx-padding: 20;" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="19.0">
 
          <effect>
             <DropShadow color="#00000055" radius="10.0" />
@@ -55,13 +53,12 @@
          <TextField fx:id="txtUsername" maxWidth="250.0" promptText="Username" />
          <PasswordField fx:id="txtPassword" maxWidth="250.0" promptText="Password" />
 
-         <Button fx:id="btnLogin" onAction="#loginOnAction" prefWidth="250.0"
-                 style="-fx-background-color: #38ef7d; -fx-text-fill: white; -fx-background-radius: 10;" text="Login" />
+         <Button fx:id="btnLogin" onAction="#loginOnAction" prefWidth="250.0" style="-fx-background-color: #38ef7d; -fx-text-fill: white; -fx-background-radius: 10;" text="Login" />
 
          <Label fx:id="lblError" textFill="red" visible="false" />
 
          <padding>
-            <Insets top="5.0" right="5.0" bottom="5.0" />
+            <Insets bottom="5.0" right="5.0" top="5.0" />
          </padding>
       </VBox>
 
